[tool.poetry]
name = "repl_python3_AvoidSSHSMeme"
version = "0.1.0"
description = ""
authors = ["austinlee0818 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
pygame = "^2.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
